tests/snapshots/snapshot_tests__animations_default.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Animation settings - managed by Nirify

animations {
}
