tests/snapshots/snapshot_tests__animations_disabled.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Animation settings - managed by niri-settings-rust

animations {
    off
}
