tests/snapshots/snapshot_tests__animations_slowdown.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Animation settings - managed by Nirify

animations {
    slowdown 2.50
}
