tests/snapshots/snapshot_tests__appearance_border_enabled.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Appearance settings - managed by Nirify

layout {
    gaps 16

    focus-ring {
        on
        width 4
        active-color "#7fc8ff"
        inactive-color "#505050"
        urgent-color "#9b0000"
    }

    border {
        on
        width 3
        active-color "#ff5500"
        inactive-color "#333333"
        urgent-color "#9b0000"
    }

    default-column-width { proportion 0.50; }
}
