tests/snapshots/snapshot_tests__appearance_focus_ring_disabled.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Appearance settings - managed by Nirify

layout {
    gaps 16

    focus-ring {
        off
        width 4
        active-color "#7fc8ff"
        inactive-color "#505050"
        urgent-color "#9b0000"
    }

    border {
        off
        width 4
        active-color "#ffc87f"
        inactive-color "#505050"
        urgent-color "#9b0000"
    }

    center-focused-column "never"

    default-column-width { proportion 0.50; }
}
