tests/snapshots/snapshot_tests__behavior_center_focused.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Behavior settings - managed by niri-settings-rust
