tests/snapshots/snapshot_tests__behavior_default.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Behavior settings - managed by Nirify

input {
    workspace-auto-back-and-forth false
}
