tests/snapshots/snapshot_tests__behavior_focus_follows_mouse.snap
---
source: tests/snapshot_tests.rs
expression: kdl
---
// Behavior settings - managed by Nirify

input {
    focus-follows-mouse
    workspace-auto-back-and-forth false
}
